Bug 64754 - [5 Regression] bootstrap failed with --with-build-config=bootstrap-lto
Summary: [5 Regression] bootstrap failed with --with-build-config=bootstrap-lto
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: bootstrap (show other bugs)
Version: 5.0
: P3 normal
Target Milestone: 5.0
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-23 15:41 UTC by H.J. Lu
Modified: 2015-01-26 12:49 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2015-01-23 00:00:00


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2015-01-23 15:41:36 UTC
On Linux/x86-32, r220018 gave

# .../gcc/configure --enable-clocale=gnu --with-system-zlib --with-demangler-in-ld --enable-languages=c,c++ i686-linux --prefix=/usr/gcc-5.0.0 --with-local-prefix=/usr/local --enable-gnu-indirect-function --enable-targets=all --with-build-config=bootstrap-lto --with-fpmath=sse
# make -j8 bootstrap
...
Comparing stages 2 and 3
warning: gcc/cc1plus-checksum.o differs
warning: gcc/cc1-checksum.o differs
Bootstrap comparison failure!
gcc/ipa-icf.o differs
Makefile:19842: recipe for target 'compare' failed
make[3]: *** [compare] Error 1
make[3]: Leaving directory '/export/build/gnu/gcc-32bit-lto/build-i686-linux'
Makefile:19821: recipe for target 'stage3-bubble' failed
make[2]: *** [stage3-bubble] Error 2
Comment 1 H.J. Lu 2015-01-23 20:09:59 UTC
The difference is

--- ipa-icf.s	2015-01-23 12:03:20.086849827 -0800
+++ ../stage1-gcc/ipa-icf.s	2015-01-23 12:03:14.307833745 -0800
@@ -10348,43 +10348,45 @@
 	.ascii	"\322\306L\372\225Mi\361\0373\342\r\013"
 	.text
 	.section	.gnu.lto__ZN7ipa_icf12sem_function12bb_dict_testE8auto_vecIiLj0EEii.1,"e",@progbits
-	.string	"x\234\245W[L\223g\030\376\336\377\373\373\267\364\f\003\334\026\222-K\f\021\305\216l\311\262]\271;
\263d\027\333nv\267(c\312\305\246Q\\\2741\374\264\324\003\232\311\346\21187\234\342TD\020\005\021d\n8\246s*v\n\212\
210\003\001\217\250\005D\205Q\272\367\375\376\326\265\245\234\224\204\266\377\367\275\307\347}\236\227\"3\355g\216\
215\261l|\337\213\277`g \345_`,\307 I\274\242\2011\325(_71\325\314A\326\316eIw9\021\217\225\332\367\360X\007\212v\2
54Hz\031O\r\033\360I5\353\231A\212Y\233\214\007fz5\307HF\2725i\267Ff\002\233\346f\226,ta\325.,\314\032\274\260\001\
320\007\325"
-	.ascii	",[\342\262N\321\033b\214&\263\305j\203l\030\224|\022T\r^\270"
-	.ascii	"\246\314\332\253\252No\303\246\274\217;\353\235f7g\314/1x'\t"
-	.ascii	"\336N\242v~\205Yh9\320\374\250+\206\277\013\f?\367\235\337\336"
-	.ascii	"e},\2719\300\233\370\350\311=\264\203\323\243\0042>z\2337\266"
-	.ascii	"\231\223\367\250\371N5?\177'\036s\330\013\234B\356\203$\330\017"
-	.ascii	"I\f\217\030\024C2\0327\226\027\026\003\177_\204\335\332^rSFG"
-	.ascii	"\325Y\327\266S\235\027\357\3462\034\210\364\224\031\224\b\317"
-	.ascii	"\242K5m\n\377Px^\355\367=\343\344\251\326=CO\331\315up0\322S"
-	.ascii	"\307\240Tx\226\026\256[o\344\363\205\347\246&\357\367\001\317"
-	.ascii	"\r.y>9\226Eq<\004\311d}\263|t\213E\311Ek;a\204\340\224\203\002"
-	.ascii	"\370^\366i\235\352\367\257Q\353\216\277\365\303\235\322\370\031"
gnu-18:pts/2[35]>   diff -up ../1 ../2| grep gnu.lto__ZN7ipa_icf12sem_function12bb_dict_testE8auto_vecIiLj0EEii.
-  [284] .gnu.lto__ZN7ipa_icf12sem_function12bb_dict_testE8auto_vecIiLj0EEii.1 PROGBITS        00000000 05bd36 000700 00   E  0   0  1
+  [284] .gnu.lto__ZN7ipa_icf12sem_function12bb_dict_testE8auto_vecIiLj0EEii.1 PROGBITS        00000000 05bd36 0006fd 00   E  0   0  1
gnu-18:pts/2[36]> diff -up ipa-icf.s ../stage1-gcc     /export/build/gnu/gcc-32bit-lto/build-i686-linux/stage2-gcc
--- ipa-icf.s	2015-01-23 12:03:20.086849827 -0800
+++ ../stage1-gcc/ipa-icf.s	2015-01-23 12:03:14.307833745 -0800
@@ -10348,43 +10348,45 @@
 	.ascii	"\322\306L\372\225Mi\361\0373\342\r\013"
 	.text
 	.section	.gnu.lto__ZN7ipa_icf12sem_function12bb_dict_testE8auto_vecIiLj0EEii.1,"e",@progbits
-	.string	"x\234\245W[L\223g\030\376\336\377\373\373\267\364\f\003\334\026\222-K\f\021\305\216l\311\262]\271;\263d\027\333nv\267(c\312\305\246Q\\\2741\374\264\324\003\232\311\346\21187\234\342TD\020\005\021d\n8\246s*v\n\212\210\003\001\217\250\005D\205Q\272\367\375\376\326\265\245\234\224\204\266\377\367\275\307\347}\236\227\"3\355g\216\215\261l|\337\213\277`g \345_`,\307 I\274\242\2011\325(_71\325\314A\326\316eIw9\021\217\225\332\367\360X\007\212v\254Hz\031O\r\033\360I5\353\231A\212Y\233\214\007fz5\307HF\2725i\267Ff\002\233\346f\226,ta\325.,\314\032\274\260\001\320\007\325"
-	.ascii	",[\342\262N\321\033b\214&\263\305j\203l\030\224|\022T\r^\270"
-	.ascii	"\246\314\332\253\252No\303\246\274\217;\353\235f7g\314/1x'\t"
-	.ascii	"\336N\242v~\205Yh9\320\374\250+\206\277\013\f?\367\235\337\336"
-	.ascii	"e},\2719\300\233\370\350\311=\264\203\323\243\0042>z\2337\266"
-	.ascii	"\231\223\367\250\371N5?\177'\036s\330\013\234B\356\203$\330\017"
-	.ascii	"I\f\217\030\024C2\0327\226\027\026\003\177_\204\335\332^rSFG"
-	.ascii	"\325Y\327\266S\235\027\357\3462\034\210\364\224\031\224\b\317"
-	.ascii	"\242K5m\n\377Px^\355\367=\343\344\251\326=CO\331\315up0\322S"
-	.ascii	"\307\240Tx\226\026\256[o\344\363\205\347\246&\357\367\001\317"
-	.ascii	"\r.y>9\226Eq<\004\311d}\263|t\213E\311Ek;a\204\340\224\203\002"
-	.ascii	"\370^\366i\235\352\367\257Q\353\216\277\365\303\235\322\370\031"
-	.ascii	"\200nL\006J\250\245U\200b\350E$\003P\013F4QL\370\2427S\016\013"
-	.ascii	"}\262\342\213\301N\237b\351,\016_b\342\311.\201\342%\322\005"
-	.ascii	"c^LLc\355\223$z\347\267\300\265u\365\223u=\n\025\343\342:\027"
-	.ascii	"\3026;\211\335\004IT\207\311\361\220\t\253\341u:\315H\357\342"
-	.ascii	"J\250\321!2\322\343\243\263\356\322\256>q\206"
-	.string	"\355\326\0167^QR\366a\273\035e\205nC.`u\001\302\303aH\241\221\271\033\232\3644zY\240\371\364\364\331\265\346B\370)\007=\366{\216\021\nF\0277\300\021\304\221\356\367t;K\365\216\203\030\320\340\346&\250\200B\030%\030\351\256\255\250\276\310\224\275\nS@%8\250\002\006G!;X\"Z\344m\254\3453w#\257:vxr\r\271gT\234\2639\222[\242\270*\230I\005b\323\316\232\241\246\234\326\274\204\260\341u\354)\336<\227\214\304\374\374\022D\316\026\216av\006\325\004U|h\233\226\3106\013\324ynn\245\036k\002=\376\\pl\300\212=\346\253\336B\327\341\204\0247\267\301q\321(hq\241\026\034\254\023r\333\\'\244()\220O\360[\240\221>\2113\\ 8b\347\360G\314\305\343\320\260\276\343p\237\211\f\355BmG}\217\277\343Z-\210i\f\006\203\023\344\r'1\247"
-	.string	"\257:b\226\336\376\301\317\362\363\021\273\330\340,\353 \005\375h\372v\026\212\263\267\260\353az\216\323Y\244b\272X\ri\bG\272\036\221FwQ\253\034\240\243\263\177\315\266\375\236n\320\250f\"\366a\273\255.\353\363\003;\371\366\203\035\223\225\365V\017Y\250\035=\366\335"
-	.ascii	"I\322\350\221\235-\375\330G\034\247\230:v9Qc\370\246\342O4\177"
-	.ascii	"3\022\2346\207\377i\235\215\034u\330\343)\254G$\036\341\232\221"
-	.ascii	"\005\355\350dX\257=[C\306\006\023\263\362\367qX\331\210cc\360"
-	.ascii	"\007R\362\016\270\325*\321\036\231TW\367\266\351\263}\352Zr\217"
-	.ascii	"\363\243*\031\234F+\027\361\302\342\346\257\bp\024\001\016\t"
-	.ascii	"\254u\327\335\251\b"
-	.string	"\354\214\020X\250\242J<\025\223)\352\317qj?\033T\324_\223**>\252\242\316\341\234\261\"\026\321@\231\257\273E\341\253\204*\236TV\035\264a4U\213\246\212hz8\037%\332\005\230\211<\b\310\363\227\366\274\304py\272\017lN%\033\312\032\220(\037#\321&!\321\2134\\c\250~\fQ%j\"\320<c@\363\026\236\252I\230C\242\373;(Q\212\013\227p\326\004\323\305\b\230\3566\027\004`\262E\205\35125f\024(5\037\350\f\372\207 C\001&B\246\371\177d\312\273\177T\302\232\306\220C\022YP\032\321\272\0375\027\211K\013\341\022yxE\200u\225\300J\fG\007i\223\200%k+'\f\233\2163U\370e \021Z\0052\222\026\031-\nzn7\232\035\251\324\3015p\214\342h\304\r\264ik\255\225ky\020\361\304\300\022\3233\231\230o\2472\242\257\"[\220\365\327i\025\t"
-	.string	"\203\326\367o\224Ura\255\nS}\320\264\235LM(F\2270\035#\305\031~I\247Uv\003I\357\346\257\212Z\fl\203\266\244\206\363n\345\365\230\264\355\020\033J\240\327\"\t\024\204\350\237(\364\331\335o\231\355\346\257C\207"
-	.ascii	"I~\016Rq\333\356\255\2724\007m\247NpP\235\001\224nB\032\241t"
-	.ascii	"\355\324\372\226}\201\277\330\261\220\022\\\3671lu\262X\022\355"
-	.ascii	"S[\022]c\226D\351\344K\242{\234%\321\023\\\022\267^pI\334Fjv"
-	.ascii	"\005\226DH\003\323X\fw4\372c\200\216\223\253"
-	.string	"\007\213?g\323R\337\335p\365\261\351I\357\236\226[\374\251\332}#-|%5\322J\302\352\250\307\350+\211\nNqP\024\252\203\301\375\350\362\354\215&\317\007B\236\017#dcd\222&\033\274\016\023\006=\207\262\377\301x\354\247d\360(\204\375&\226\233L\344\337^\335\227\327c\013\314g\232T\367\006\251\336;\206\352}A\252\213\304\375\220\346\022r\355\223\314\001^w4\226n\376`\n\274\036\030\303\353\032\317\235\311x\375x\034^\017\006y\375\344\005y\375\024g:\020\340\365\340.\017\237>\257\237\275\024\257\207^\212\327\303\023\362\232\346\201\325Q\217\023\362\032\243P\035\f\376\215\316\353\221h\274\366\t^\217F\360\332\022\344\265/\202\327\276\b^\373\306\3435%\003\177\b\257\255\032\257]\025k\266\325xF\002\337<\023\304\3779\261\302\300\306\326\342\332\277G\337p]\034\304\267O\300\320\225k\316\225\033i\3513"
-	.ascii	"P\245$\323\310\226<\033zZK\266\235}\003\377\323\002rCJ\24592"
-	.ascii	"V.]\262,\313\261\350\233\025\216\314\257\265\217\231Y\216\345"
-	.ascii	"KV,K\317X\356X\224\236.~3\227.H\315L\377jn:\223\263\026g.\327"
-	.ascii	"/\\\370\305\227\231\351Y\212f\247d-X\266(#+u\212\301\276\315"
-	.ascii	"H\237\273\230I\231+\377\003X\0019v"
+	.string	"x\234\245W[P\224e\030\376\336\377\373\367\337e\317\020`5\314\3244\3430b\270Q\3154uUwN3]T7\3355F\244\\\224\216b\343\215\303\357.\353\001\235\244<1fa\202\251\210 \n\"H\272`\244\231\247MA\0211\024\360|\330\345\240B.\333\373~\377\256\355.\313I\231aw\377\357{\217\317\373</\213\314\264\2377m\214\345\343\373\016\374\005;\003\251\3504c\313\f\222\304k\232\031S\215\362e\023S\315\034d\355\\\226t\347S\361Xi|\007\217u\240h\307\212\244\227\361\324\260\006\237T\263\236\031\244\204\225\351x`\246Ws\202d\244[\223vkd&\260inf\311B\027V\355\302\302\254\341\013\033"
+	.string	"}P\r\300\362%.\353\024\275!\301h2[\2546\310\207A) A\335\340\351K\312\214\035\252\352\3645\257+\374\350j\223\323\354\346\214\005%\006o\245\301\033i\324\316\2570\003-\373[\037t'\360\267\201\341g\377\251\315\335\326\001\311\315\001^\305Go\301\336-\234\036%\220\361\321\327\272\266\303\234\276]-r\252EE[\361\230\303\016\340\024r'\244\301.Hcx\304\240\034\322\321\270\245\272\244\034\370\273\"\354\306\316\212k2:\252NO\307V\365\375d7\227aw\254\247\314\240Bx\226\235k\350P\370\007\302\363b_\3401'O\325\363\030=e7\327\301\236XO\035\203J\341YY\262j\265\221\317\026\236\353\316\370\276\017y\256q\311\263\311\261*\216\343^H'\353k\325#\033,J\001Z\333\t#\004\247\032\024\300\367\252O<j0\270B\365\034z\355\207\233\225\311\323"
+	.string	"\335\230\f\224PK\253"
+	.string	"\305\320\213H\006\240\026\214h\242\230\360Eo\246\034\026\372d\305\027\203\235>%\322Y\022\276$$\223]\n\305K\245\013\306|\230\230\306\352\227$z\347\327\301\265q\371\303U\275\n\025\343\342:\027\30263\215]\003IT\207\311\361\220\t\253\341U:\315H\357\342J\244\321^2\322\343\243\323sn\233_\234a\273\215\303-\027\224\214\235\330nWU\211\333P"
+	.ascii	"X]\210\360\260\0172hd\356\3463z\032\275,\320|t\354\304Js\t\374"
+	.ascii	"\264\f=vy\017\022\nF\0277\300~\304\221\356\267\3678+\365\216"
+	.ascii	"=\030\320\340\346&\250\201\022\030!\030\351\256\243\254\251\314"
+	.ascii	"\224\277\024S@-8\250\002\006\007 ?\\\"Z\024\256m\344\323K\221"
+	.ascii	"W][\274\005\206\202\343*\316\331\034\313-Q\\\035L\247\002\261"
+	.ascii	"ig\303\320\231e\355\205)Q\303\353\332^\276~\026\031\211\371\005"
+	.ascii	"%\210\235-\034\304\354\f\352\t\252\344\3106-\261m\026\253\236"
+	.ascii	"\201~\304\305Jm6\204\332\374\271\370`\277\025\333,R}%\256})\031"
+	.ascii	"nn\203C\242W\320BC#8\330U(\350p\035\226\342dAJ\301o\241^\374"
+	.ascii	"\022g\270Cp\312\316\341\017\231\213'\241aS\327>\277\211\f\355"
+	.ascii	"Bp\007\002\003\337q\255\034\2045\001\203\301a\362\206#\230S\340"
+	.ascii	"W\0373N_\337\340\247EE\b_bx\234\036\310@?\"\200\235EB\355+\351"
+	.ascii	"\276\237\275\314\351,S1]\242\0066D\203\335\204`\243\273\250U"
+	.ascii	"\0161\322\331\267b\323.o\017hl3\021\001\261\335v\227\365\351"
+	.ascii	"\201\235|\373\300\216\311\252\356\326\017Y\250\035=\366\335\f"
+	.ascii	"i\322\310\376\255m}\330G\022\247\230:v>U#\371\272\362\2175\177"
+	.ascii	"3r\234\226G\360\221\307F\216:\354\361(\326#\022?\341\232"
+	.string	"\221\005\355\350dX\257=[#&\007\343\023\363\3671\210\331\202cc\360\007\262\362&\270\325:\321\036\231\324\327\337\355\320\347\007\324\225\344\236\024Da28\206V.\342\205\305\315_\020\340(\002\034\322X\373\266[\223\321\330q\241\261HQUxk&\022\325\237c\324~\",\252\277&\024Ur\\Q\235\3049cE,\246\201\252@O\233\302\227\na<\254\255\333c\303h\252\026M\025\321\364p*N\264\3230\035y\020R\350/\235\205\251\321\nu\357^\237I6\2245\244R>J\245g\204J\317\322p\215\221\3721\214\245R\023\341\346\035\205\233\257\344hC\312\353\244\273\277\303*\245\320p\016\307MH\235\215A\352Vkq\b)[\\\244\316SoF\001T\353\356\253a\377\bp(\300x\340\264\376\017Nu\317\217JT\337\030rH\"\013J#\272\017\242\354b\241i#hb\017/\b\274.\022^\251\321"
+	.ascii	"!sR\260dm\353Da\323u\274\016\277\022\244B\273@F\322\"\243Eq\357"
+	.ascii	"\215\026\263#\223:\270\004\216\021\234\216\270\201\016m\263\265"
+	.ascii	"s-\017\"\236\032\332cz&\023\371\355TF\374md\013\023\3772m#\001"
+	.ascii	"`\330\372\316\225\252Z.\254Ua\252\017\233v\222\251\t\365\350"
+	.ascii	"\022\246\243\3248-(\351\264\312\256 \357\335\374EQ\213\201\255"
+	.ascii	"\321\366\324p\341\365\302^\223\266 \022#9\364R,\207\302\020\375"
+	.ascii	"\023\207>\245}\226\231n\3762t\t\220\344\247 \225w\224n\324e9"
+	.ascii	"hA]\005\007\325\031B\351\032d\021J\227\216\256n\333\031\372\273"
+	.ascii	"\235\b\031\341\215\237\300\226\247\213=\3219\271=\321=jOTN\274"
+	.ascii	"'z\306\330\023\275\341=q\375\031\367\304\r\244fwhOD40\205\335"
+	.ascii	"pS\243?\006\350:\262|\260\37436%\365\335\212V\037\233\232\364"
+	.ascii	"nk\271\305_\253\322+Y\321[\251\205\266\022VG=\306\337JTp\206"
+	.ascii	"\203\242P\035\f\356\304\227\347\335x\362\274'\344y?F6F&i\262"
+	.ascii	"\301\353(a\320s$\373\357\215\305~J\006\017\"\330ob\005\351D\376"
+	.ascii	"\315\365\376\302^[h>S\244\272/L\365\273\243\250\356\017S"
+	.string	"]$\356\203,\227\220\253_2\207x\335\325R\271\376\275I\360\272\177\024\257\033\2747'\342\365\300\030\274\036\f\363\372\3413\362\372\021\316\264?\304\353\301m^>u^?~.^\017=\027\257\207\307\3455\315\003\253\243\036\307\3455F\241:\030\374\033\237\327O\342\361: x=\022\303kK\230\327\201\030^\007bx\035\030\213\327\224\f\202\021\274\266j\274v\325\254\330\324\340}\022\372\362\231\"\376\333I\024\0066\266\022\327\376m\372\222\353\342 \276\200\002\206\256]q\262\332HK\237\001\200*\245\231\236l(\264\241\247\265b\323\211W\360\377- 7\244T\226#g\311\202\371\013\363\034s\277Y\354\310\375Z\373\230\233\347X4\177\361\302\354\234E\216\271\331\331\3427w\301\234\314\334\354\257fe39o^\356\"\375\027_|\376env\236\242\331)ys\026\316\315\311\313\234d\260os\262g\315cR\356\222\377"
+	.ascii	" \342>L"
 	.text
 	.section	.gnu.lto__ZN7ipa_icf12sem_function14equals_privateEPNS_8sem_itemER8hash_mapIP11symtab_nodeS2_22default_hashmap_traitsE.part.153.1,"e",@progbits
 	.ascii	"x\234\235]\007\\\025\307\326\237\331\275\025P\214\2115X\243\246"
Comment 2 H.J. Lu 2015-01-23 20:23:25 UTC
The function in question is

ipa_icf::sem_function::bb_dict_test(auto_vec<int, 0u>, int, int) [clone .1]
Comment 3 H.J. Lu 2015-01-23 21:25:43 UTC
Valgrind reports:

==18318== Conditional jump or move depends on uninitialised value(s)
==18318==    at 0x8C67E4A: maybe_set_dependence_info(tree_node*, tree_node*, unsigned short&, variable_info*, unsigned short&) (tree-ssa-structalias.c:7046)
==18318==    by 0x8C68270: compute_dependence_clique() (tree-ssa-structalias.c:7127)
==18318==    by 0x8C683ED: compute_may_aliases() (tree-ssa-structalias.c:7184)
==18318==    by 0x899E7EC: execute_function_todo(function*, void*) (passes.c:1927)
==18318==    by 0x899DB1D: do_per_function(void (*)(function*, void*), void*) (passes.c:1647)
==18318==    by 0x899EA99: execute_todo(unsigned int) (passes.c:2012)
==18318==    by 0x899F3BC: execute_one_pass(opt_pass*) (passes.c:2339)
==18318==    by 0x899F548: execute_pass_list_1(opt_pass*) (passes.c:2378)
==18318==    by 0x899F578: execute_pass_list_1(opt_pass*) (passes.c:2379)
==18318==    by 0x899F5AB: execute_pass_list(function*, opt_pass*) (passes.c:2389)
==18318==    by 0x899DE68: do_per_function_toporder(void (*)(function*, void*), void*) (passes.c:1724)
==18318==    by 0x89A0112: execute_ipa_pass_list(opt_pass*) (passes.c:2730)
==18318== 

In codes added by r218005:

          if (clique == 0)
            clique = ++cfun->last_clique;
          if (restrict_var->ruid == 0)
                            ^^^^ It isn't initialized.
            restrict_var->ruid = ++last_ruid;
          MR_DEPENDENCE_CLIQUE (ref) = clique;
          MR_DEPENDENCE_BASE (ref) = restrict_var->ruid;
          return true;
Comment 4 H.J. Lu 2015-01-23 21:43:31 UTC
I am testing this patch:

diff --git a/gcc/tree-ssa-structalias.c b/gcc/tree-ssa-structalias.c
index 96d1ce3..4c43b75 100644
--- a/gcc/tree-ssa-structalias.c
+++ b/gcc/tree-ssa-structalias.c
@@ -409,6 +409,7 @@ new_var_info (tree t, const char *name)
   ret->may_have_pointers = true;
   ret->only_restrict_pointers = false;
   ret->is_restrict_var = false;
+  ret->ruid = 0;
   ret->is_global_var = (t == NULL_TREE);
   ret->is_fn_info = false;
   if (t && DECL_P (t))
Comment 5 H.J. Lu 2015-01-23 22:44:33 UTC
A patch is posted at

https://gcc.gnu.org/ml/gcc-patches/2015-01/msg02141.html
Comment 6 hjl@gcc.gnu.org 2015-01-26 12:47:55 UTC
Author: hjl
Date: Mon Jan 26 12:47:20 2015
New Revision: 220108

URL: https://gcc.gnu.org/viewcvs?rev=220108&root=gcc&view=rev
Log:
Initialize ruid in new_var_info

	PR bootstrap/64754
	* tree-ssa-structalias.c (new_var_info): Initialize ruid.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/tree-ssa-structalias.c
Comment 7 H.J. Lu 2015-01-26 12:49:17 UTC
Fixed.