Initialize ruid in new_var_info

PR bootstrap/64754
	* tree-ssa-structalias.c (new_var_info): Initialize ruid.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@220108 138bc75d-0d04-0410-961f-82ee72b054a4